# guitar-pratice

./: .gitignore  README.md  activate.sh  pyproject.toml  requirements.txt
guitar_practice/: __init__.py  __main__.py  download.py  notation.py  process.py  separate.py  transcribe.py
scripts/: spike_sheet_generation.py
tests/: test_integration.py  test_notation.py  test_transcribe.py
tests/fixtures/: guitar_sample.mid
